# piper_mod_sdk

./: README.md
configurator/: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json
configurator/src/: App.tsx  theme.ts  vite-env.d.ts
configurator/src/components/: ConnectionBar.tsx  JointCard.tsx  ParamSlider.tsx  SerialTerminal.tsx
configurator/src/components/ui/: toaster.tsx
configurator/src/hooks/: useSerial.ts
configurator/src/schemas/: params.ts
python/: README.md  pyproject.toml
python/examples/: fk.py  ik.py  joint_cmd.py  monitor.py  teaching.py
python/src/swerve_arm/: __init__.py  ik_solver.py  rx_daemon.py  swerve_arm.py
python/src/swerve_arm/resources/: swerve.urdf
ros2/: README.md
ros2/src/swerve_description/: CMakeLists.txt  package.xml
ros2/src/swerve_description/launch/: display_robot.launch.py
ros2/src/swerve_description/meshes/: END_EFF.STL  L1.STL  L2.STL  L3.STL  L4.STL  L6.STL
ros2/src/swerve_description/rviz/: show_robot_model.rviz
ros2/src/swerve_description/urdf/: swerve.urdf.xacro  swerve_exported.urdf.xacro
ros2/src/swerve_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros2/src/swerve_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  swerve.ros2_control.xacro  swerve.srdf  swerve.urdf.xacro
ros2/src/swerve_moveit_config/launch/: demo.launch.py  move_group.launch.py  (+6 more)
utils/dynamics/: capture_data.py  ident.ipynb  requirements.txt
utils/scripts/: can_up.sh  canbusload.sh
(+2 files in other folders)
