[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swerve-arm"
version = "0.0.1"
description = "Swerve机械臂 Python SDK"
requires-python = ">=3.10"

dependencies = [
    "python-can>=4.0",
    "pin>=3.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/swerve_arm"]
include-package-data = true

[tool.pylance]
typeCheckingMode = "standard"
